# Fs-Downloader-BETA

./: .gitignore  AGENTS.md  README.md  index.html  package.json  pnpm-lock.yaml  task.md  tsconfig.json  vite.config.ts  walkthrough.md
browser-extension/: AMO_SUBMISSION.md  README.md  build.mjs  manifest.chromium.json  manifest.firefox.json
browser-extension/0.2.3-test/: background.js  manifest.json  popup.css
browser-extension/release/: 7c2944a3066543438b23-0.2.7.xpi  7c2944a3066543438b23-0.2.9.xpi  firefox-extension.xpi
browser-extension/src/: background.js  content.js  popup.css  popup.html  popup.js
docs/: browser-extension-filters.md  custom-categories.md  database.md  download-engine.md  download-windows.md  layout-redesign.md  profile-statistics.md  resume-downloads.md  segmented-engine.md  system-tray.md  window-lifecycle.md
scratch/: fetch_xdm.cjs  fetch_xdm2.cjs
scratch/firefox-compatible-analysis/: manifest.json  popup.js
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: browser_bridge.rs  lib.rs  main.rs
src-tauri/src/commands/: context_menu.rs  downloads.rs  metrics.rs  mod.rs  profile.rs  transfer.rs
src-tauri/src/database/: migrations.rs  mod.rs  models.rs
src-tauri/src/database/repositories/: chunks.rs  downloads.rs  history.rs  metrics.rs  mod.rs  statistics.rs
src-tauri/src/download/: engine.rs  extraction.rs  mod.rs  runtime.rs
src/app/: App.tsx  navigation.ts
src/domain/: categories.ts  download.ts  metrics.ts  profile.ts  (+1 more)
(+42 files in other folders)
