[package]
name = "sf-downloader"
version = "0.2.0"
description = "A modern desktop download manager"
authors = ["SF Downloader Contributors"]
edition = "2021"

[lib]
name = "sf_downloader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["stream", "rustls-tls"] }
tokio = { version = "1", features = ["fs", "io-util", "time", "macros", "sync", "net"] }
tokio-util = "0.7"
futures-util = "0.3"
axum = "0.8"
httpdate = "1"
keyring = "3"
zip = "2"
sevenz-rust2 = { version = "0.21.2", features = ["aes256"] }
flate2 = "1"
tar = "0.4"
unrar-ng = "0.7.7"
drag = "2.1.1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_System_Threading"] }

[dev-dependencies]
sevenz-rust2 = { version = "0.21.2", features = ["aes256", "compress"] }
